vpc.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Production Ready VPC",
  "Metadata": {
    "Author": { "Ref": "ParamAuthorName" }
  },
  "Parameters": {
    "ParamAuthorName": {
      "Type": "String",
      "Description": "Owner of the CFN Template."
    },
    "ParamNatGateway": {
      "Type": "String",
      "Default": "true",
      "AllowedValues": ["true", "false"],
      "ConstraintDescription": "Whether to launch a NAT Gateway for the private subnets. true or false only."
    },
    "ParamVPCCidrRange": {
      "Type": "Number",
      "Default": 0,
      "MinValue": 0,
      "MaxValue": 255,
      "Description": "The 'x' in 10.x.0.0/16.  Can be 0-255",
      "ConstraintDescription": "Should be a number between 0-255"
    }
  },
  "Conditions": {
    "CreateNatGateway": {
      "Fn::Equals": [{ "Ref": "ParamNatGateway" }, "true"]
    }
  },
  "Resources": {
    "VPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": {
          "Fn::Sub": "10.${ParamVPCCidrRange}.0.0/16"
        },
        "EnableDnsSupport": true,
        "EnableDnsHostnames": true,
        "InstanceTenancy": "default",
        "Tags": [
          { "Key": "Owner", "Value": { "Ref": "ParamAuthorName" } },
          { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-vpc" } }
        ]
      }
    },
    "VPCIPv6CidrBlock": {
      "Type": "AWS::EC2::VPCCidrBlock",
      "DependsOn": "VPC",
      "Properties": {
        "AmazonProvidedIpv6CidrBlock": true,
        "VpcId": { "Ref": "VPC" }
      }
    },
    "PublicSubnetA": {
      "Type": "AWS::EC2::Subnet",
      "DependsOn": "VPCIPv6CidrBlock",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "CidrBlock": {
          "Fn::Sub": "10.${ParamVPCCidrRange}.0.0/20"
        },
        "Ipv6CidrBlock": {
          "Fn::Select" : [
            0, 
            {
              "Fn::Cidr": [
                { 
                  "Fn::Select": [
                    0,
                    {
                      "Fn::GetAtt": [ "VPC", "Ipv6CidrBlocks" ]
                    }
                  ]
                },
                256,
                64 
              ]
            }
          ]
        },
        "AvailabilityZone": {
          "Fn::Select": ["0", { "Fn::GetAZs": "" }]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": { "Fn::Sub": "${AWS::StackName}-public-a" }
          },
          { "Key": "Owner", "Value": { "Ref": "ParamAuthorName" } }
        ]
      }
    },
    "PrivateSubnetA": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": {
          "Fn::Sub": "10.${ParamVPCCidrRange}.16.0/21"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            "0",
            { "Fn::GetAZs": "" }
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${AWS::StackName}-private-a"
            }
          },
          { "Key": "Owner",
            "Value": { "Ref": "ParamAuthorName" }
          }
        ]
      }
    },
    "DbSubnetA": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": {
          "Fn::Sub": "10.${ParamVPCCidrRange}.24.0/22"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            "0",
            { "Fn::GetAZs": "" }
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${AWS::StackName}-db-a"
            }
          },
          {
            "Key": "Owner",
            "Value": { "Ref": "ParamAuthorName" }
          }
        ]
      }
    },
    "PublicSubnetB": {
      "Type": "AWS::EC2::Subnet",
      "DependsOn": "VPCIPv6CidrBlock",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": {
          "Fn::Sub": "10.${ParamVPCCidrRange}.32.0/20"
        },
        "Ipv6CidrBlock": { 
          "Fn::Select" : [
            1, 
            {
              "Fn::Cidr": [
                { 
                  "Fn::Select": [
                    0,
                    {
                      "Fn::GetAtt": [ "VPC", "Ipv6CidrBlocks" ]
                    }
                  ]
                },
                256,
                64 
              ]
            }
          ]
        },
        "AvailabilityZone": {
          "Fn::Select": [
            "1",
            { "Fn::GetAZs": "" }
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${AWS::StackName}-public-b"
            }
          },
          {
            "Key": "Owner",
            "Value": { "Ref": "ParamAuthorName" }
          }
        ]
      }
    },
    "PrivateSubnetB": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": {
          "Fn::Sub": "10.${ParamVPCCidrRange}.48.0/21"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            "1",
            { "Fn::GetAZs": "" }
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${AWS::StackName}-private-b"
            }
          },
          {
            "Key": "Owner",
            "Value": { "Ref": "ParamAuthorName" }
          }
        ]
      }
    },
    "DbSubnetB": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": {
          "Fn::Sub": "10.${ParamVPCCidrRange}.56.0/22"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            "1",
            { "Fn::GetAZs": "" }
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${AWS::StackName}-db-b"
            }
          },
          {
            "Key": "Owner",
            "Value": { "Ref": "ParamAuthorName" }
          }
        ]
      }
    },
    "PublicSubnetC": {
      "Type": "AWS::EC2::Subnet",
      "DependsOn": "VPCIPv6CidrBlock",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": {
          "Fn::Sub": "10.${ParamVPCCidrRange}.64.0/20"
        },
        "Ipv6CidrBlock": {
          "Fn::Select" : [
            2, 
            {
              "Fn::Cidr": [
                { 
                  "Fn::Select": [
                    0,
                    {
                      "Fn::GetAtt": [ "VPC", "Ipv6CidrBlocks" ]
                    }
                  ]
                },
                256,
                64 
              ]
            }
          ]
        },
        "AvailabilityZone": {
          "Fn::Select": [
            "2",
            { "Fn::GetAZs": "" }
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${AWS::StackName}-public-c"
            }
          },
          {
            "Key": "Owner",
            "Value": { "Ref": "ParamAuthorName" }
          }
        ]
      }
    },
    "PrivateSubnetC": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": {
          "Fn::Sub": "10.${ParamVPCCidrRange}.80.0/21"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            "2",
            { "Fn::GetAZs": "" }
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${AWS::StackName}-private-c"
            }
          },
          {
            "Key": "Owner",
            "Value": { "Ref": "ParamAuthorName" }
          }
        ]
      }
    },
    "DbSubnetC": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": {
          "Fn::Sub": "10.${ParamVPCCidrRange}.88.0/22"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            "2",
            { "Fn::GetAZs": "" }
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${AWS::StackName}-db-c"
            }
          },
          {
            "Key": "Owner",
            "Value": { "Ref": "ParamAuthorName" }
          }
        ]
      }
    },
    "PublicRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "Tags": [
          { "Key": "Owner", "Value": { "Ref": "ParamAuthorName" } },
          { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-public-route-table" } }
        ]
      }
    },
    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          { "Key": "Owner", "Value": { "Ref": "ParamAuthorName" } },
          { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-igw" } }
        ]
      }
    },
    "InternetGatewayAttachment": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "InternetGatewayId": { "Ref": "InternetGateway" }
      }
    },
    "InternetRoute": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "InternetGatewayAttachment",
      "Properties": {
        "RouteTableId": { "Ref": "PublicRouteTable" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "InternetGateway"
        }
      }
    },
    "RouteAssociationPublicSubnetA": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PublicSubnetA" },
        "RouteTableId": { "Ref": "PublicRouteTable" }
      }
    },
    "RouteAssociationPublicSubnetB": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PublicSubnetB" },
        "RouteTableId": { "Ref": "PublicRouteTable" }
      }
    },
    "RouteAssociationPublicSubnetC": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PublicSubnetC" },
        "RouteTableId": { "Ref": "PublicRouteTable" }
      }
    },
    "PrivateRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "Tags": [
          { "Key": "Owner", "Value": { "Ref": "ParamAuthorName" } },
          { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-private-route-table" } }
        ]
      }
    },
    "NatGatewayEIP": {
      "Type": "AWS::EC2::EIP",
      "Condition": "CreateNatGateway",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "NatGateway": {
      "Type": "AWS::EC2::NatGateway",
      "Condition": "CreateNatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": ["NatGatewayEIP", "AllocationId"]
        },
        "SubnetId": { "Ref": "PublicSubnetA" },
        "Tags": [
          { "Key": "Owner", "Value": { "Ref": "ParamAuthorName" } },
          { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-nat-gw" } }
        ]
      }
    },
    "NatRoute": {
      "Type": "AWS::EC2::Route",
      "Condition": "CreateNatGateway",
      "DependsOn": "NatGateway",
      "Properties": {
        "RouteTableId": { "Ref": "PrivateRouteTable" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "NatGateway"
        }
      }
    },
    "RouteAssociationPrivateSubnetA": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PrivateSubnetA" },
        "RouteTableId": { "Ref": "PrivateRouteTable" }
      }
    },
    "RouteAssociationPrivateSubnetB": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PrivateSubnetB" },
        "RouteTableId": { "Ref": "PrivateRouteTable" }
      }
    },
    "RouteAssociationPrivateSubnetC": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PrivateSubnetC" },
        "RouteTableId": { "Ref": "PrivateRouteTable" }
      }
    },
    "RouteAssociationDbSubnetA": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "DbSubnetA" },
        "RouteTableId": { "Ref": "PrivateRouteTable" }
      }
    },
    "RouteAssociationDbSubnetB": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "DbSubnetB" },
        "RouteTableId": { "Ref": "PrivateRouteTable" }
      }
    },
    "RouteAssociationDbSubnetC": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "DbSubnetC" },
        "RouteTableId": { "Ref": "PrivateRouteTable" }
      }
    },
    "NetworkAclPublic": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${AWS::StackName}-public-nacl"
            }
          },
          {
            "Key": "Owner",
            "Value": { "Ref": "ParamAuthorName" }
          }
        ]
      }
    },
    "NetworkAclPublicInboundAll": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": { "Ref": "NetworkAclPublic" },
        "RuleNumber": "100",
        "Protocol": -1,
        "CidrBlock": "0.0.0.0/0",
        "RuleAction": "allow",
        "Egress": false
      }
    },
    "NetworkAclPublicInboundAllIPv6": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": { "Ref": "NetworkAclPublic" },
        "RuleNumber": "101",
        "Protocol": -1,
        "RuleAction": "allow",
        "Egress": false,
        "Ipv6CidrBlock": "::/0"
      }
    },
    "NetworkAclPublicOutboundAll": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": { "Ref": "NetworkAclPublic" },
        "RuleNumber": "100",
        "Protocol": -1,
        "RuleAction": "allow",
        "Egress": true,
        "CidrBlock": "0.0.0.0/0"
      }
    },
    "NetworkAclPublicOutboundAllIPv6": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": { "Ref": "NetworkAclPublic" },
        "RuleNumber": "101",
        "Protocol": -1,
        "RuleAction": "allow",
        "Egress": true,
        "Ipv6CidrBlock": "::/0"
      }
    },
    "NetworkAclAssociationPublicSubnetA": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PublicSubnetA" },
        "NetworkAclId": { "Ref": "NetworkAclPublic" } 
      }
    },
    "NetworkAclAssociationPublicSubnetB": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId":  { "Ref": "PublicSubnetB" },
        "NetworkAclId": { "Ref": "NetworkAclPublic" }
      }
    },
    "NetworkAclAssociationPublicSubnetC": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId":  { "Ref": "PublicSubnetC" },
        "NetworkAclId": { "Ref": "NetworkAclPublic" }
      }
    },
    "NetworkAclPrivate": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${AWS::StackName}-private-nacl"
            }
          },
          {
            "Key": "Owner",
            "Value": { "Ref": "ParamAuthorName" }
          }
        ]
      }
    },
    "NetworkAclPrivateInboundHTTP": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": { "Ref": "NetworkAclPrivate" },
        "RuleNumber": "100",
        "Protocol": 6,
        "RuleAction": "allow",
        "Egress": false,
        "CidrBlock": {
          "Fn::Sub": "10.${ParamVPCCidrRange}.0.0/16"
        },
        "PortRange": {
          "From": 80,
          "To": 80
        }
      }
    },
    "NetworkAclPrivateInboundHTTPS": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": { "Ref": "NetworkAclPrivate" },
        "RuleNumber": "110",
        "Protocol": 6,
        "RuleAction": "allow",
        "Egress": false,
        "CidrBlock": {
          "Fn::Sub": "10.${ParamVPCCidrRange}.0.0/16"
        },
        "PortRange": {
          "From": 443,
          "To": 443
        }
      }
    },
    "NetworkAclPrivateInboundMySQLAurora": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": { "Ref": "NetworkAclPrivate" },
        "RuleNumber": "120",
        "Protocol": 6,
        "RuleAction": "allow",
        "Egress": false,
        "CidrBlock": {
          "Fn::Sub": "10.${ParamVPCCidrRange}.0.0/16"
        },
        "PortRange": {
          "From": 3306,
          "To": 3306
        }
      }
    },
    "NetworkAclPrivateInboundSSH": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": { "Ref": "NetworkAclPrivate" },
        "RuleNumber": "130",
        "Protocol": 6,
        "RuleAction": "allow",
        "Egress": false,
        "CidrBlock": {
          "Fn::Sub": "10.${ParamVPCCidrRange}.0.0/16"
        },
        "PortRange": {
          "From": 22,
          "To": 22
        }
      }
    },
    "NetworkAclPrivateInboundEphemeral": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": { "Ref": "NetworkAclPrivate" },
        "RuleNumber": "140",
        "Protocol": 6,
        "RuleAction": "allow",
        "Egress": false,
        "CidrBlock": "0.0.0.0/0",
        "PortRange": {
          "From": 1024,
          "To": 65535
        }
      }
    },
    "NetworkAclPrivateOutboundHTTP": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": { "Ref": "NetworkAclPrivate" },
        "RuleNumber": "100",
        "Protocol": 6,
        "RuleAction": "allow",
        "Egress": true,
        "CidrBlock": "0.0.0.0/0",
        "PortRange": {
          "From": 80,
          "To": 80
        }
      }
    },
    "NetworkAclPrivateOutboundHTTPS": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": { "Ref": "NetworkAclPrivate" },
        "RuleNumber": "110",
        "Protocol": 6,
        "RuleAction": "allow",
        "Egress": true,
        "CidrBlock": "0.0.0.0/0",
        "PortRange": {
          "From": 443,
          "To": 443
        }
      }
    },
    "NetworkAclPrivateOutboundEphemeral": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": { "Ref": "NetworkAclPrivate" },
        "RuleNumber": "120",
        "Protocol": 6,
        "RuleAction": "allow",
        "Egress": true,
        "CidrBlock": {
          "Fn::Sub": "10.${ParamVPCCidrRange}.0.0/16"
        },
        "PortRange": {
          "From": 1024,
          "To": 65535
        }
      }
    },
    "NetworkAclAssociationPrivateSubnetA": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId":  { "Ref": "PrivateSubnetA" },
        "NetworkAclId": { "Ref": "NetworkAclPrivate" }
      }
    },
    "NetworkAclAssociationPrivateSubnetB": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId":  { "Ref": "PrivateSubnetB" },
        "NetworkAclId": { "Ref": "NetworkAclPrivate" }
      }
    },
    "NetworkAclAssociationPrivateSubnetC": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId":  { "Ref": "PrivateSubnetC" },
        "NetworkAclId": { "Ref": "NetworkAclPrivate" }
      }
    },
    "NetworkAclAssociationDbSubnetA": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId":  { "Ref": "DbSubnetA" },
        "NetworkAclId": { "Ref": "NetworkAclPrivate" }
      }
    },
    "NetworkAclAssociationDbSubnetB": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId":  { "Ref": "DbSubnetB" },
        "NetworkAclId": { "Ref": "NetworkAclPrivate" }
      }
    },
    "NetworkAclAssociationDbSubnetC": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId":  { "Ref": "DbSubnetC" },
        "NetworkAclId": { "Ref": "NetworkAclPrivate" }
      }
    }
  },
  "Outputs": {
    "VPCId": {
      "Description": "VPC Id",
      "Value": { "Ref": "VPC" },
      "Export": {
        "Name": {
          "Fn::Sub": "${AWS::StackName}-vpc-id"
        }
      }
    }
  }
}
